--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,88 @@
 </head>
 
 <body>
-    
+    <header class="header">
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <div class="header__logo">
+                        <a class="header__logo-link" href="">
+                            <img src="images/headerlogo.png" alt="logo">
+                        </a>
+                    </div>
+                    <div class="header__box"></div>
+                    <a class="header-btn" href="#">Become a Seller</a>
+                    <a class="bell" href="#"></a>
+                    <a class="letter" href="#"></a>
+                    <a class="basket" href="#"></a>
+
+                    <div class="foto">
+                        <a href="#"><img src="images/user-foto.png" alt="user-foto"></a>
+                    </div>
+
+                    <div class="header__user">
+
+                        <div class="name">
+                            <a href="#"><span>Taofiq Hakim</span></a>
+                        </div>
+                        <div class="balance">
+                            <a href="">$20.45</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="header__down">
+            <div class="container">
+                <div class="header__down-inner">
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__list-item">
+                                <a class="menu__list--link" href="#">
+                                    home
+                                </a>
+                            </li>
+                            <li class="menu__list-item">
+                                <a class="menu__list--link" href="#">
+                                    all products
+                                </a>
+                            </li>
+                            <li class="menu__list-item">
+                                <a class="menu__list--link" href="#">
+                                    wordpress
+                                </a>
+                            </li>
+                            <li class="menu__list-item">
+                                <a class="menu__list--link" href="#">
+                                    festures
+                                </a>
+                            </li>
+                            <li class="menu__list-item">
+                                <a class="menu__list--link" href="#">
+                                    Pages
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="search-form">
+                        <form class="search-inner">
+                            <input class="search-input"  type="text" placeholder="Search product here..." required>
+                            <button class="search-btn" type="submit">
+                                <img class="search-img" src="images/icon/search-icon.png" alt="">
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </header>
+
+
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.min.js"></script>
