--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
                     </nav>
                     <div class="search-form">
                         <form class="search-inner">
-                            <input class="search-input"  type="text" placeholder="Search product here..." required>
+                            <input class="search-input" type="text" placeholder="Search product here..." required>
                             <button class="search-btn" type="submit">
                                 <img class="search-img" src="images/icon/search-icon.png" alt="">
                             </button>
@@ -87,6 +87,30 @@
 
         </div>
     </header>
+    <section class="search" style="background-image: url(images/gradient-bg.jpg);">
+        <div class="container">
+            <div class="search__inner">
+                <div class="search__inner-general">
+                    Create Your Own
+                </div>
+                <div class="search__inner-title">
+                    Digital Product Marketplace
+                </div>
+                <div class="search__inner-text">
+                    MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products
+                </div>
+                <div class="search__inner-btn">
+                    <a class="search__inner-btn--one" href="#">View All Products</a>
+                    <a class="search__inner-btn--two" href="#">Popular Products</a>
+                </div>
+                <div class="search__box">
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
 
 
 
